--- a/404.html
+++ b/404.html
@@ -11,9 +11,9 @@
   <title> 404 Page not found &middot; SnabbWall </title>
 
   
-  <link rel="stylesheet" href="http://snabbwall.igalia.com/css/poole.css">
-  <link rel="stylesheet" href="http://snabbwall.igalia.com/css/syntax.css">
-  <link rel="stylesheet" href="http://snabbwall.igalia.com/css/hyde.css">
+  <link rel="stylesheet" href="https://snabbwall.igalia.com/css/poole.css">
+  <link rel="stylesheet" href="https://snabbwall.igalia.com/css/syntax.css">
+  <link rel="stylesheet" href="https://snabbwall.igalia.com/css/hyde.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
@@ -29,7 +29,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://snabbwall.igalia.com/"><h1>SnabbWall</h1></a>
+      <a href="https://snabbwall.igalia.com/"><h1>SnabbWall</h1></a>
       <p class="lead">
        L7 flow filtering 
       </p>
@@ -57,7 +57,7 @@
 
     <div class="content container">
       <h1>404: Page not found</h1>
-        <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://snabbwall.igalia.com/">Head back home</a> to try finding it again.</p>
+        <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://snabbwall.igalia.com/">Head back home</a> to try finding it again.</p>
     </div>
 
   </body>
